# moldova-stores-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: __init__.py  config.py  main.py  search_cache.py  self_ping.py
app/adapters/: __init__.py  base.py  bomba.py  darwin.py  enter.py  maximum.py  smart.py  xstore.py
app/clients/: __init__.py  curl_cffi_client.py  http.py
app/models/: __init__.py  product.py  store.py
app/normalizers/: availability.py  price.py  product.py
app/parsing/: __init__.py  html.py  jsonld.py  livewire.py
app/routes/: products.py  stores.py
app/storage/: __init__.py  db.py  product_identity.py
tests/: test_normalizers.py  test_product_identity.py  test_search_pagination.py
