[project]
name = "moldova-stores-api"
version = "0.1.0"
description = "Romanian-only product API adapters for Moldovan stores."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "curl-cffi>=0.7.0",
  "fastapi==0.128.8",
  "httpx==0.28.1",
  "lxml>=5.2.0",
  "psycopg[binary]>=3.2.0",
  "pydantic==2.12.5",
  "uvicorn==0.30.6",
  "click==8.1.8",
  "eval-type-backport>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
