[metadata]
name = moldova-stores-api
version = 0.1.0
description = Romanian-only product API adapters for Moldovan stores.

[options]
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4>=4.12.3
    curl-cffi>=0.7.0
    fastapi==0.128.8
    httpx==0.28.1
    lxml>=5.2.0
    pydantic==2.12.5
    uvicorn==0.30.6
    click==8.1.8
    eval-type-backport>=0.2.0

[options.extras_require]
dev =
    pytest>=8.2.0
